--- a/nginx_yaml_files/service.yaml
+++ b/nginx_yaml_files/service.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: nginx
   name: nginx-service
-  namespace: default
+  namespace: nginx-server
 spec:
   ports:
   - port: 80
